--- a/GameStart.html
+++ b/GameStart.html
@@ -14,7 +14,7 @@
             <h1 class="quizstart">Are you ready kids?</h1>
             <a href="Game.html" class="btn">Play</a>
             <a href="Blog.html" class="btn">Blog</a>
-            <a href="Homepage.html" class="btn">Return To Home</a>
+            <a href="Index.html" class="btn">Return To Home</a>
         </div>
     </div>
 </body>
