--- a/End.html
+++ b/End.html
@@ -18,7 +18,7 @@
             <h1 id="score">1000</h1>
             <a href="Game.html" class="btn">Play again?</a>
             <a href="Blog.html" class="btn">My Blog</a>
-            <a href="Homepage.html" class="btn">Return To Home</a>
+            <a href="Index.html" class="btn">Return To Home</a>
         </div>
     </div>
     <script src="js/end.js"></script>
