--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<ul class='taskbarbase'> 
-		<li><a class="taskbar taskbar1" href="Homepage.html">Home</a></li>
+		<li><a class="taskbar taskbar1" href="Index.html">Home</a></li>
 		<li><a class="active taskbar taskbar1" href="Gallery.html">Gallery </a></li>
 		<li><a class="taskbar taskbar1" href="Blog.html">Blog</a></li>
 		<li><a class="taskbar taskbar1" href="GameStart.html">Mini Game</a></li>
