--- a/Blog.html
+++ b/Blog.html
@@ -14,7 +14,7 @@
         <h6><a name="Jump1">Clients Blog Page</a></h6>
     </div>
     <ul class='taskbarbase'> 
-        <li><a class="taskbar taskbar1" href="Homepage.html">Home</a></li>
+        <li><a class="taskbar taskbar1" href="Index.html">Home</a></li>
         <li><a class="taskbar taskbar1" href="Gallery.html">Gallery </a></li>
         <li><a class="active taskbar taskbar1" href="#Blog">Blog</a></li>
         <li><a class="taskbar taskbar1" href="GameStart.html">Mini Game</a></li>
